k3s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kubernetes-demo
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes-demo.local
      http:
        paths:
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                number: 80

        - path: /
          pathType: Prefix
          backend:
            service:
              name: front
              port:
                number: 80
